...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Overview_recyclerView"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/startDirections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OrderingText"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/startDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="onDirectionsClicked"
        android:text="Directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
...
